syntax = "proto3";

package account;

import "google/api/annotations.proto";

service Accounter {
  rpc VerifySignature (SignatureRequest) returns (SignatureResponse){
    option (google.api.http) = {
      post: "/v1/web3Auth"
    };
  }
}

message SignatureRequest {
    string message = 1;
    string account = 2;
    string signature = 3;
}

message SignatureResponse {
    bool authorized = 1;
    string token = 2;
    string error = 3;
}